--- a/aula 0903.md
+++ b/aula 0903.md
@@ -29,8 +29,10 @@ débito [negativa] devendo 1.000,00 -> banco vai quere o dinheiro
 
 ## java
 
-if {} ==> executar as instruções caso  o teste logico seja verdadeiro
+if {} ==> executar as instruções caso, o teste logico seja verdadeiro
 else {} ==> caso o teste logico seja falso
+
+## exemplo pratico
 
 limite de idade valida
 idade >= 7 
